# personal-finance-app

./: .gitignore  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
app/: Home.py  api.py  app-ui.py  constants.py  database.py  db.py  main.py  models.py  notebook.ipynb  settings.py
app/exporters/: export_csv.py  export_parquet.py
app/importers/: __init__.py  bb_csv_checking_importer.py  bb_csv_importer.py  c6_csv_credit_importer.py  sicoob_pdf_importer.py
app/pages/: 1_Classify.py  2_Import.py
docs/: architecture.excalidraw  feature-map.md
iac/: docker-run.sh
migrations/: env.py
migrations/versions/: 029f783a0cbc_table_alterations.py  1be0341f822c_first_version_of_tables.py  46ece57a2e30_table_alterations.py  746f0cd13534_cria_tabelas_iniciais.py  78e53c5c64d5_table_alterations.py  ff8b2af9fd37_startup_tables.py
tests/: conftest.py  test_db.py  test_main.py
